--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
+* {
+  box-sizing: border-box;
+  font-family: 'Poppins';
+}
+
 body {
+  height: 100%;
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #302f2f;
 }
 
 code {
